--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,19 +1,65 @@
 version: "3.2"
 
 services:
-  ros2-talker:
+  roudi-router: 
+    container_name: roudi-router
     image: ros:galactic
+    command: iox-roudi
+    ipc: host
+    network_mode: host
     init: true
     tty: true
-    network_mode: host
-    command: >-
-      ros2 topic pub /chatter std_msgs/msg/Int32 '{data: 1}' -r 100
-  ros2-listener:
-    image: ros:galactic
-    init: true
-    tty: true
-    network_mode: host
-    command: >-
-      ros2 topic echo /chatter
+    volumes:
+      - type: bind
+        source: ./cyclonedds.xml
+        target: /opt/cyclonedds.xml
+      # - type: bind 
+      #   source: /dev 
+      #   target: /dev
+      # - type: bind 
+      #   source: /tmp 
+      #   target: /tmp
     depends_on:
       - ros2-talker
+      - ros2-listener
+    env_file: ros.env
+  ros2-talker:
+    image: ros:galactic
+    command: >-
+      ros2 topic pub /chatter std_msgs/msg/Int32 '{data: 1}' -r 1
+    volumes:
+      - type: bind
+        source: ./cyclonedds.xml
+        target: /opt/cyclonedds.xml
+      # - type: bind 
+      #   source: /dev 
+      #   target: /dev 
+      # - type: bind 
+      #   source: /tmp 
+      #   target: /tmp
+    env_file: ros.env
+    ipc: host
+    network_mode: host
+    init: true
+    tty: true
+  ros2-listener:
+    image: ros:galactic
+    command: >-
+      ros2 topic echo /chatter std_msgs/msg/Int32
+    depends_on:
+      - ros2-talker
+    ipc: host
+    volumes:
+      - type: bind
+        source: ./cyclonedds.xml
+        target: /opt/cyclonedds.xml
+      # - type: bind 
+      #   source: /dev 
+      #   target: /dev 
+      # - type: bind 
+      #   source: /tmp 
+      #   target: /tmp 
+    env_file: ros.env
+    network_mode: host
+    init: true
+    tty: true
